DNN Recommender: Normalization and Eval

--- a/experiments/dnn.ipynb
+++ b/experiments/dnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "import torch\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "import sys\n",
     "sys.path.append('..')\n",
@@ -24,15 +25,59 @@
     "books, users, ratings = preprocess2(items=books, users=users, ratings=ratings)\n",
     "\n",
     "recommender = DNNRecommender()\n",
-    "ratings, users, books = recommender.preprocess(items=books, users=users, ratings=ratings)\n",
+    "data, ratings = recommender.preprocess(items=books, users=users, ratings=ratings)\n",
     "\n",
-    "train_users, test_users, train_books, test_books, train_ratings, test_ratings = train_test_split(\n",
-    "    users,\n",
-    "    books,\n",
+    "features_to_normalize = ['Age', 'Year'] \n",
+    "scaler = StandardScaler()\n",
+    "data[features_to_normalize] = scaler.fit_transform(data[features_to_normalize])\n",
+    "\n",
+    "train_data, test_data, train_ratings, test_ratings = train_test_split(\n",
+    "    data,\n",
     "    ratings,\n",
     "    test_size=0.2,\n",
     "    random_state=42\n",
-    ")"
+    ")\n",
+    "train_users = train_data.values[:, :2]\n",
+    "train_items = train_data.values[:, 2:]\n",
+    "\n",
+    "test_users = test_data.values[:, :2]\n",
+    "test_items = test_data.values[:, 2:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20, Loss: 62464.55859375\n",
+      "Epoch 2/20, Loss: 8650783.0\n",
+      "Epoch 3/20, Loss: 697115.375\n",
+      "Epoch 4/20, Loss: 925614.875\n",
+      "Epoch 5/20, Loss: 1439362.375\n",
+      "Epoch 6/20, Loss: 757093.125\n",
+      "Epoch 7/20, Loss: 678043.4375\n",
+      "Epoch 8/20, Loss: 586239.25\n",
+      "Epoch 9/20, Loss: 490250.6875\n",
+      "Epoch 10/20, Loss: 395429.59375\n",
+      "Epoch 11/20, Loss: 307166.125\n",
+      "Epoch 12/20, Loss: 298733.0625\n",
+      "Epoch 13/20, Loss: 290178.53125\n",
+      "Epoch 14/20, Loss: 281548.5\n",
+      "Epoch 15/20, Loss: 272881.1875\n",
+      "Epoch 16/20, Loss: 264210.46875\n",
+      "Epoch 17/20, Loss: 263338.71875\n",
+      "Epoch 18/20, Loss: 262456.03125\n",
+      "Epoch 19/20, Loss: 261563.09375\n",
+      "Epoch 20/20, Loss: 260660.625\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommender.fit(items=train_items, users=train_users, ratings=train_ratings.values)"
    ]
   },
   {
@@ -44,31 +89,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20, Loss: 175341.90625\n",
-      "Epoch 2/20, Loss: 262449.75\n",
-      "Epoch 3/20, Loss: 108761.2734375\n",
-      "Epoch 4/20, Loss: 597.42333984375\n",
-      "Epoch 5/20, Loss: 53503.09375\n",
-      "Epoch 6/20, Loss: 85022.4921875\n",
-      "Epoch 7/20, Loss: 45035.94921875\n",
-      "Epoch 8/20, Loss: 4830.6796875\n",
-      "Epoch 9/20, Loss: 7198.11328125\n",
-      "Epoch 10/20, Loss: 32704.525390625\n",
-      "Epoch 11/20, Loss: 38985.71875\n",
-      "Epoch 12/20, Loss: 21530.03515625\n",
-      "Epoch 13/20, Loss: 3296.792236328125\n",
-      "Epoch 14/20, Loss: 1912.6373291015625\n",
-      "Epoch 15/20, Loss: 12937.0439453125\n",
-      "Epoch 16/20, Loss: 19540.177734375\n",
-      "Epoch 17/20, Loss: 15240.6064453125\n",
-      "Epoch 18/20, Loss: 5877.26708984375\n",
-      "Epoch 19/20, Loss: 314.8359069824219\n",
-      "Epoch 20/20, Loss: 2385.318603515625\n"
+      "Test Loss: 259574.609375\n",
+      "Average Precision: 0.0034363360933488047\n"
      ]
     }
    ],
    "source": [
-    "recommender.fit(items=train_books.values, users=train_users.values, ratings=train_ratings.values)"
+    "recommender.eval(users=test_users, items=test_items, ratings=test_ratings.values)"
    ]
   },
   {
@@ -80,12 +107,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 7925.26611328125\n"
+      "Precision at 10: 0.0\n"
      ]
     }
    ],
    "source": [
-    "recommender.eval(users=test_users.values, items=test_books.values, ratings=test_ratings.values)"
+    "import numpy as np\n",
+    "from sklearn.metrics import precision_score\n",
+    "\n",
+    "def precision_at_k(y_true, y_pred, k=10):\n",
+    "    assert len(y_true) == len(y_pred)\n",
+    "    precision_scores = []\n",
+    "    \n",
+    "    for true, pred in zip(y_true, y_pred):\n",
+    "        top_k_pred = np.argsort(pred)[-k:]  # Get top k predictions\n",
+    "        true_set = set(true)  # Set of true items\n",
+    "        pred_set = set(top_k_pred)  # Set of predicted items\n",
+    "        \n",
+    "        # Calculate precision for the current user/item\n",
+    "        precision_scores.append(len(true_set & pred_set) / float(k))\n",
+    "    \n",
+    "    return np.mean(precision_scores)\n",
+    "\n",
+    "# Assuming you have true_ratings and predictions as numpy arrays\n",
+    "true_ratings = test_ratings.values.reshape(-1, 1)\n",
+    "predictions = recommender.predict(test_users, test_items)\n",
+    "predictions = predictions.reshape(-1, 1)\n",
+    "\n",
+    "# Calculate precision at k\n",
+    "precision_k = precision_at_k(true_ratings, predictions, k=10)\n",
+    "print(f'Precision at 10: {precision_k}')\n"
    ]
   }
  ],
