--- a/experiments/dnn.ipynb
+++ b/experiments/dnn.ipynb
@@ -53,26 +53,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20, Loss: 62464.55859375\n",
-      "Epoch 2/20, Loss: 8650783.0\n",
-      "Epoch 3/20, Loss: 697115.375\n",
-      "Epoch 4/20, Loss: 925614.875\n",
-      "Epoch 5/20, Loss: 1439362.375\n",
-      "Epoch 6/20, Loss: 757093.125\n",
-      "Epoch 7/20, Loss: 678043.4375\n",
-      "Epoch 8/20, Loss: 586239.25\n",
-      "Epoch 9/20, Loss: 490250.6875\n",
-      "Epoch 10/20, Loss: 395429.59375\n",
-      "Epoch 11/20, Loss: 307166.125\n",
-      "Epoch 12/20, Loss: 298733.0625\n",
-      "Epoch 13/20, Loss: 290178.53125\n",
-      "Epoch 14/20, Loss: 281548.5\n",
-      "Epoch 15/20, Loss: 272881.1875\n",
-      "Epoch 16/20, Loss: 264210.46875\n",
-      "Epoch 17/20, Loss: 263338.71875\n",
-      "Epoch 18/20, Loss: 262456.03125\n",
-      "Epoch 19/20, Loss: 261563.09375\n",
-      "Epoch 20/20, Loss: 260660.625\n"
+      "Epoch 1/20, Loss: 2746.76611328125\n",
+      "Epoch 2/20, Loss: 105474.7890625\n",
+      "Epoch 3/20, Loss: 1758.8427734375\n",
+      "Epoch 4/20, Loss: 71249.3046875\n",
+      "Epoch 5/20, Loss: 42192.67578125\n",
+      "Epoch 6/20, Loss: 2255.166015625\n",
+      "Epoch 7/20, Loss: 1171.29248046875\n",
+      "Epoch 8/20, Loss: 543.1190185546875\n",
+      "Epoch 9/20, Loss: 269.3381042480469\n",
+      "Epoch 10/20, Loss: 267.4319763183594\n",
+      "Epoch 11/20, Loss: 446.2208251953125\n",
+      "Epoch 12/20, Loss: 467.2278137207031\n",
+      "Epoch 13/20, Loss: 483.6711730957031\n",
+      "Epoch 14/20, Loss: 495.6233825683594\n",
+      "Epoch 15/20, Loss: 503.2602233886719\n",
+      "Epoch 16/20, Loss: 506.82843017578125\n",
+      "Epoch 17/20, Loss: 506.80841064453125\n",
+      "Epoch 18/20, Loss: 506.44757080078125\n",
+      "Epoch 19/20, Loss: 505.77703857421875\n",
+      "Epoch 20/20, Loss: 504.8271179199219\n"
      ]
     }
    ],
@@ -89,13 +89,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 259574.609375\n",
-      "Average Precision: 0.0034363360933488047\n"
+      "Test Loss: 506.1771545410156\n",
+      "Average Precision: 0.003188494543937089\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "recommender.eval(users=test_users, items=test_items, ratings=test_ratings.values)"
+    "metrics = recommender.eval(users=test_users, items=test_items, ratings=test_ratings.values)\n",
+    "print(metrics)"
    ]
   },
   {
@@ -113,7 +115,6 @@
    ],
    "source": [
     "import numpy as np\n",
-    "from sklearn.metrics import precision_score\n",
     "\n",
     "def precision_at_k(y_true, y_pred, k=10):\n",
     "    assert len(y_true) == len(y_pred)\n",
@@ -136,7 +137,7 @@
     "\n",
     "# Calculate precision at k\n",
     "precision_k = precision_at_k(true_ratings, predictions, k=10)\n",
-    "print(f'Precision at 10: {precision_k}')\n"
+    "print(f'Precision at 10: {precision_k}')"
    ]
   }
  ],
@@ -156,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
