--- a/experiments/page_rank_recommender.ipynb
+++ b/experiments/page_rank_recommender.ipynb
@@ -2,13 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import networkx as nx"
+    "import networkx as nx\n",
+    "\n",
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings_df = pd.read_csv('../data/Ratings.csv', delimiter=';')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocess data"
    ]
   },
   {
@@ -17,72 +42,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('../data/Ratings.csv', delimiter=';')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Filter out users or books with very few interactions to reduce noise (optional)\n",
+    "# filter users and books with less than 5 interactions\n",
     "user_threshold = 5\n",
     "book_threshold = 5\n",
     "\n",
-    "user_counts = data['User-ID'].value_counts()\n",
-    "book_counts = data['ISBN'].value_counts()\n",
+    "user_counts = ratings_df['User-ID'].value_counts()\n",
+    "book_counts = ratings_df['ISBN'].value_counts()\n",
     "\n",
-    "filtered_data = data[data['User-ID'].isin(user_counts[user_counts >= user_threshold].index)]\n",
-    "filtered_data = filtered_data[filtered_data['ISBN'].isin(book_counts[book_counts >= book_threshold].index)]\n",
+    "filtered_users = user_counts[user_counts >= user_threshold].index\n",
+    "filtered_books = book_counts[book_counts >= book_threshold].index\n",
     "\n",
-    "# Create a bipartite graph\n",
-    "B = nx.Graph()\n",
+    "user_mask = ratings_df['User-ID'].isin(filtered_users)\n",
+    "book_mask = ratings_df['ISBN'].isin(filtered_books)\n",
     "\n",
-    "# Add nodes with the bipartite attribute\n",
-    "users = list(filtered_data['User-ID'].unique())\n",
-    "books = list(filtered_data['ISBN'].unique())\n",
+    "ratings_df = ratings_df[user_mask & book_mask]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Init the bipartite graph\n",
     "\n",
-    "B.add_nodes_from(users, bipartite=0)  # Add user nodes\n",
-    "B.add_nodes_from(books, bipartite=1)  # Add book nodes\n",
+    "Let $G (V, E)$ be a bipartite graph with vertices $V = V_I \\sqcup V_U$, where \n",
     "\n",
-    "# Add edges between users and books based on interactions\n",
-    "edges = list(filtered_data[['User-ID', 'ISBN']].itertuples(index=False, name=None))\n",
-    "B.add_edges_from(edges)"
+    "- $V_I$ is the set of nodes corresponding to books, \n",
+    "- $V_U$ is the set of nodes corresponding to users,\n",
+    "\n",
+    "and edge set $E = \\left\\{ ui \\ | \\ R(u, i); u \\in V_U, i \\in V_I\\right\\}$, where $R(u, i)$ is 1 if user $u$ has rated book $i$, and 0 otherwise."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tqdm import tqdm"
+    "# init a graph\n",
+    "G = nx.Graph()\n",
+    "\n",
+    "# form a bipartite graph with users and books being the two partitions\n",
+    "G.add_nodes_from(filtered_users, bipartite=0)\n",
+    "G.add_nodes_from(filtered_books, bipartite=1)\n",
+    "\n",
+    "# add edges between users and books based on interactions\n",
+    "edges = list(ratings_df[['User-ID', 'ISBN']].itertuples(index=False, name=None))\n",
+    "G.add_edges_from(edges)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PageRank Algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Page Rank score for a vertex $v_i$ is iteratively calculated as follows:\n",
+    "$$\n",
+    "r(v_i) = \\frac{1 - \\alpha}{|V|} + \\alpha \\sum_{v_j \\in N^-(v_i)} \\frac{r(v_j)}{d^+(v_j)}\n",
+    "$$\n",
+    "where:\n",
+    "- $|V|$ is the number fo vertices in a graph\n",
+    "- $N^-(v)$ is the in-neighborhood of a vertex $v$ (a set of vertices that have outgoing edge to $v$)\n",
+    "- $d^+(v)$ is the out-degree of a vertex $v$ (number of vertices that can be reached from $v$ in one step)\n",
+    "- $\\alpha$ is a weight of pure PageRank score (\"damping factor\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pagerank(G, alpha=0.85, max_iter=100, tol=1e-06):\n",
-    "    \"\"\"\n",
-    "    Compute PageRank for each node in the graph.\n",
     "\n",
-    "    Parameters:\n",
-    "    - G: The graph (NetworkX graph)\n",
-    "    - alpha: Damping factor, typically 0.85\n",
-    "    - max_iter: Maximum number of iterations\n",
-    "    - tol: Tolerance to check convergence\n",
-    "\n",
-    "    Returns:\n",
-    "    - A dictionary of nodes with PageRank as value\n",
-    "    \"\"\"\n",
     "    nodes = G.nodes()\n",
     "    N = len(nodes)\n",
     "\n",
-    "    # Initialize the PageRank dict with equal probability for each node\n",
+    "    # init the PageRank dict with equal ranks\n",
     "    pagerank = {node: 1 / N for node in nodes}\n",
     "\n",
     "    for i in tqdm(range(max_iter)):\n",
@@ -90,87 +131,172 @@
     "        for node in nodes:\n",
     "            rank_sum = 0\n",
     "            for neighbor in G.neighbors(node):\n",
-    "                rank_sum += prev_pagerank[neighbor] / len(list(G.neighbors(neighbor)))\n",
+    "                n_neighbors = len(list(G.neighbors(neighbor)))\n",
+    "                rank_sum += prev_pagerank[neighbor] / n_neighbors\n",
     "            pagerank[node] = (1 - alpha) / N + alpha * rank_sum\n",
     "\n",
-    "        # Check for convergence\n",
-    "        if sum(abs(pagerank[node] - prev_pagerank[node]) for node in nodes) < tol:\n",
-    "            print(f\"Converged after {i + 1} iterations.\")\n",
+    "        # get absolute differences between ranks and check for convergence\n",
+    "        rank_diffs = np.array([\n",
+    "            np.abs(pagerank[node] - prev_pagerank[node]) for node in nodes\n",
+    "        ])\n",
+    "        if rank_diffs.sum() < tol:\n",
     "            break\n",
     "\n",
     "    return pagerank\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculate PageRank scores"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 82%|████████▏ | 82/100 [04:53<01:04,  3.59s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converged after 83 iterations.\n",
-      "Top 10 Books by PageRank:\n",
-      "             Node  PageRank\n",
-      "22222  0971880107  0.001388\n",
-      "22206  0316666343  0.000655\n",
-      "22208  0385504209  0.000483\n",
-      "23629  0060928336  0.000388\n",
-      "22659  0312195516  0.000361\n",
-      "22302  059035342X  0.000329\n",
-      "22720  0142001740  0.000327\n",
-      "23362  0679781587  0.000326\n",
-      "26012  067976402X  0.000323\n",
-      "23031  0671027360  0.000322\n",
-      "\n",
-      "Top 10 Users by PageRank:\n",
-      "         Node  PageRank\n",
-      "988     11676  0.006272\n",
-      "3022    35859  0.002464\n",
-      "12358  153662  0.002276\n",
-      "15843  198711  0.001844\n",
-      "8029    98391  0.001652\n",
-      "6284    76352  0.001632\n",
-      "16958  212898  0.001299\n",
-      "1396    16795  0.001262\n",
-      "16304  204864  0.001232\n",
-      "18071  227447  0.001136\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      " 82%|████████▏ | 82/100 [06:12<01:21,  4.54s/it]\n"
      ]
     }
    ],
    "source": [
     "# Calculate PageRank\n",
-    "pr = pagerank(B)\n",
+    "pr = pagerank(G)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pr_df = pd.DataFrame(list(pr.items()), columns=['node', 'pagerank'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_pr_mask = pr_df['node'].isin(filtered_users)\n",
     "\n",
-    "# Convert the result to a DataFrame for easier analysis\n",
-    "pr_df = pd.DataFrame(list(pr.items()), columns=['Node', 'PageRank'])\n",
-    "\n",
-    "# Separate users and books\n",
-    "user_pr = pr_df[pr_df['Node'].isin(users)].sort_values(by='PageRank', ascending=False)\n",
-    "book_pr = pr_df[pr_df['Node'].isin(books)].sort_values(by='PageRank', ascending=False)\n",
-    "\n",
-    "# Display top 10 books based on PageRank\n",
-    "print(\"Top 10 Books by PageRank:\")\n",
-    "print(book_pr.head(10))\n",
-    "\n",
-    "# Display top 10 users based on PageRank (optional)\n",
-    "print(\"\\nTop 10 Users by PageRank:\")\n",
-    "print(user_pr.head(10))\n"
+    "user_pr = pr_df[user_pr_mask].sort_values('pagerank', ascending=False)\n",
+    "book_pr = pr_df[~user_pr_mask].sort_values('pagerank', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>node</th>\n",
+       "      <th>pagerank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>22816</th>\n",
+       "      <td>0971880107</td>\n",
+       "      <td>0.001372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22817</th>\n",
+       "      <td>0316666343</td>\n",
+       "      <td>0.000648</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22818</th>\n",
+       "      <td>0385504209</td>\n",
+       "      <td>0.000477</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22819</th>\n",
+       "      <td>0060928336</td>\n",
+       "      <td>0.000384</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22820</th>\n",
+       "      <td>0312195516</td>\n",
+       "      <td>0.000357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22827</th>\n",
+       "      <td>059035342X</td>\n",
+       "      <td>0.000325</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22823</th>\n",
+       "      <td>0142001740</td>\n",
+       "      <td>0.000324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22822</th>\n",
+       "      <td>0679781587</td>\n",
+       "      <td>0.000322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22824</th>\n",
+       "      <td>067976402X</td>\n",
+       "      <td>0.000319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22825</th>\n",
+       "      <td>0671027360</td>\n",
+       "      <td>0.000319</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             node  pagerank\n",
+       "22816  0971880107  0.001372\n",
+       "22817  0316666343  0.000648\n",
+       "22818  0385504209  0.000477\n",
+       "22819  0060928336  0.000384\n",
+       "22820  0312195516  0.000357\n",
+       "22827  059035342X  0.000325\n",
+       "22823  0142001740  0.000324\n",
+       "22822  0679781587  0.000322\n",
+       "22824  067976402X  0.000319\n",
+       "22825  0671027360  0.000319"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "book_pr.head(10)"
    ]
   },
   {
