--- a/experiments/rnn_lr.ipynb
+++ b/experiments/rnn_lr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "4    0.051752  1987.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,14 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-08-11 19:04:10.710580: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2024-08-11 19:18:40.404611: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -201,7 +201,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-08-11 19:04:20.019103: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2024-08-11 19:18:49.445503: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -209,39 +209,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training start time: \u001b[35m2024-08-11 19:04:20\u001b[0m\n",
-      "total params: \u001b[33m966,390\u001b[0m | embedding params: \u001b[33m879,646\u001b[0m | network params: \u001b[33m86,744\u001b[0m\n"
+      "Training start time: \u001b[35m2024-08-11 19:18:49\u001b[0m\n",
+      "total params: \u001b[33m995,276\u001b[0m | embedding params: \u001b[33m879,788\u001b[0m | network params: \u001b[33m115,488\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-08-11 19:04:22.320420: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:354] MLIR V1 optimization pass is not enabled\n",
-      "train: 100%|██████████| 257/257 [00:08<00:00, 31.32it/s]\n"
+      "2024-08-11 19:18:51.746971: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:354] MLIR V1 optimization pass is not enabled\n",
+      "train: 100%|██████████| 257/257 [00:08<00:00, 31.07it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 elapsed: 8.235s\n",
-      "\t \u001b[32mtrain_loss: 0.0867\u001b[0m\n"
+      "Epoch 1 elapsed: 8.304s\n",
+      "\t \u001b[32mtrain_loss: 0.0866\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "eval_listwise: 100%|██████████| 243/243 [00:00<00:00, 2298.88it/s]\n"
+      "eval_listwise: 100%|██████████| 243/243 [00:00<00:00, 1769.29it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t eval ndcg@10: 0.0044\n",
-      "\t eval precision@10: 0.0012\n",
+      "\t eval ndcg@10: 0.0018\n",
+      "\t eval precision@10: 0.0004\n",
       "==============================\n"
      ]
     },
@@ -249,7 +249,38 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "train:  48%|████▊     | 124/257 [00:03<00:03, 40.30it/s]"
+      "train: 100%|██████████| 257/257 [00:06<00:00, 38.72it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2 elapsed: 6.642s\n",
+      "\t \u001b[32mtrain_loss: 0.0846\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "eval_listwise: 100%|██████████| 243/243 [00:00<00:00, 2888.49it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t eval ndcg@10: 0.0082\n",
+      "\t eval precision@10: 0.0016\n",
+      "==============================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -274,6 +305,7 @@
     "\n",
     "model = RNN4Rec(\n",
     "    task=\"ranking\",\n",
+    "    rnn_type=\"lstm\",\n",
     "    data_info=data_info,\n",
     "    loss_type=\"focal\",\n",
     "    embed_size=16,\n",
@@ -293,9 +325,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "eval_listwise: 100%|██████████| 243/243 [00:00<00:00, 2327.08it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluation Results:\n",
+      "{'ndcg': 0.00815473617915307, 'precision': 0.001646090534979424, 'recall': 0.008916323731138546}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from libreco.evaluation import evaluate\n",
     "\n",
