--- a/experiments/page_rank_recommender.ipynb
+++ b/experiments/page_rank_recommender.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +30,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "books_df = pd.read_csv('../data/Books.csv', delimiter=';')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -38,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,11 +123,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pagerank(G, alpha=0.85, max_iter=100, tol=1e-06):\n",
+    "def pagerank(G, alpha=0.5, max_iter=100, tol=1e-06):\n",
     "\n",
     "    nodes = G.nodes()\n",
     "    N = len(nodes)\n",
@@ -154,14 +163,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 82%|████████▏ | 82/100 [06:12<01:21,  4.54s/it]\n"
+      " 19%|█▉        | 19/100 [01:13<05:12,  3.86s/it]\n"
      ]
     }
    ],
@@ -172,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -219,92 +228,172 @@
        "      <th></th>\n",
        "      <th>node</th>\n",
        "      <th>pagerank</th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Author</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Publisher</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>22816</th>\n",
+       "      <th>0</th>\n",
        "      <td>0971880107</td>\n",
-       "      <td>0.001372</td>\n",
+       "      <td>0.000999</td>\n",
+       "      <td>0971880107</td>\n",
+       "      <td>Wild Animus</td>\n",
+       "      <td>Rich Shapero</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>Too Far</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22817</th>\n",
+       "      <th>1</th>\n",
        "      <td>0316666343</td>\n",
-       "      <td>0.000648</td>\n",
+       "      <td>0.000380</td>\n",
+       "      <td>0316666343</td>\n",
+       "      <td>The Lovely Bones: A Novel</td>\n",
+       "      <td>Alice Sebold</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>Little, Brown</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22818</th>\n",
+       "      <th>2</th>\n",
        "      <td>0385504209</td>\n",
-       "      <td>0.000477</td>\n",
+       "      <td>0.000282</td>\n",
+       "      <td>0385504209</td>\n",
+       "      <td>The Da Vinci Code</td>\n",
+       "      <td>Dan Brown</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>Doubleday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22819</th>\n",
+       "      <th>3</th>\n",
        "      <td>0060928336</td>\n",
-       "      <td>0.000384</td>\n",
+       "      <td>0.000222</td>\n",
+       "      <td>0060928336</td>\n",
+       "      <td>Divine Secrets of the Ya-Ya Sisterhood: A Novel</td>\n",
+       "      <td>Rebecca Wells</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>Perennial</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22820</th>\n",
+       "      <th>4</th>\n",
        "      <td>0312195516</td>\n",
-       "      <td>0.000357</td>\n",
+       "      <td>0.000207</td>\n",
+       "      <td>0312195516</td>\n",
+       "      <td>The Red Tent (Bestselling Backlist)</td>\n",
+       "      <td>Anita Diamant</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>Picador USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22827</th>\n",
+       "      <th>5</th>\n",
        "      <td>059035342X</td>\n",
-       "      <td>0.000325</td>\n",
+       "      <td>0.000200</td>\n",
+       "      <td>059035342X</td>\n",
+       "      <td>Harry Potter and the Sorcerer's Stone (Harry P...</td>\n",
+       "      <td>J. K. Rowling</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>Arthur A. Levine Books</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22823</th>\n",
-       "      <td>0142001740</td>\n",
-       "      <td>0.000324</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22822</th>\n",
-       "      <td>0679781587</td>\n",
-       "      <td>0.000322</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22824</th>\n",
-       "      <td>067976402X</td>\n",
-       "      <td>0.000319</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22825</th>\n",
+       "      <th>6</th>\n",
        "      <td>0671027360</td>\n",
-       "      <td>0.000319</td>\n",
+       "      <td>0.000186</td>\n",
+       "      <td>0671027360</td>\n",
+       "      <td>Angels &amp; Demons</td>\n",
+       "      <td>Dan Brown</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>Pocket Star</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0142001740</td>\n",
+       "      <td>0.000186</td>\n",
+       "      <td>0142001740</td>\n",
+       "      <td>The Secret Life of Bees</td>\n",
+       "      <td>Sue Monk Kidd</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>Penguin Books</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>044023722X</td>\n",
+       "      <td>0.000185</td>\n",
+       "      <td>044023722X</td>\n",
+       "      <td>A Painted House</td>\n",
+       "      <td>John Grisham</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>Dell Publishing Company</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             node  pagerank\n",
-       "22816  0971880107  0.001372\n",
-       "22817  0316666343  0.000648\n",
-       "22818  0385504209  0.000477\n",
-       "22819  0060928336  0.000384\n",
-       "22820  0312195516  0.000357\n",
-       "22827  059035342X  0.000325\n",
-       "22823  0142001740  0.000324\n",
-       "22822  0679781587  0.000322\n",
-       "22824  067976402X  0.000319\n",
-       "22825  0671027360  0.000319"
+       "         node  pagerank        ISBN  \\\n",
+       "0  0971880107  0.000999  0971880107   \n",
+       "1  0316666343  0.000380  0316666343   \n",
+       "2  0385504209  0.000282  0385504209   \n",
+       "3  0060928336  0.000222  0060928336   \n",
+       "4  0312195516  0.000207  0312195516   \n",
+       "5  059035342X  0.000200  059035342X   \n",
+       "6  0671027360  0.000186  0671027360   \n",
+       "7  0142001740  0.000186  0142001740   \n",
+       "8  044023722X  0.000185  044023722X   \n",
+       "\n",
+       "                                               Title         Author  Year  \\\n",
+       "0                                        Wild Animus   Rich Shapero  2004   \n",
+       "1                          The Lovely Bones: A Novel   Alice Sebold  2002   \n",
+       "2                                  The Da Vinci Code      Dan Brown  2003   \n",
+       "3    Divine Secrets of the Ya-Ya Sisterhood: A Novel  Rebecca Wells  1997   \n",
+       "4                The Red Tent (Bestselling Backlist)  Anita Diamant  1998   \n",
+       "5  Harry Potter and the Sorcerer's Stone (Harry P...  J. K. Rowling  1999   \n",
+       "6                                    Angels & Demons      Dan Brown  2001   \n",
+       "7                            The Secret Life of Bees  Sue Monk Kidd  2003   \n",
+       "8                                    A Painted House   John Grisham  2001   \n",
+       "\n",
+       "                 Publisher  \n",
+       "0                  Too Far  \n",
+       "1            Little, Brown  \n",
+       "2                Doubleday  \n",
+       "3                Perennial  \n",
+       "4              Picador USA  \n",
+       "5   Arthur A. Levine Books  \n",
+       "6              Pocket Star  \n",
+       "7            Penguin Books  \n",
+       "8  Dell Publishing Company  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "book_pr.head(10)"
+    "top_books = book_pr.head(10)\n",
+    "\n",
+    "top_books_df = pd.merge(top_books, books_df, left_on='node', right_on='ISBN')\n",
+    "top_books_df"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Results analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Books with high PageRank scores are likely to be popular, meaning they are rated by users who have also interacted with other important books.\n",
+    "\n",
+    "Users with high PageRank scores are likely to read important books, meaning they are highly influential on the books score.\n",
+    "\n",
+    "PageRank algorithm can be used to solve cold start problem, identify popular and influential books and users to customize recommendations; the underlying graph structure can help identify users and book clusters."
+   ]
   }
  ],
  "metadata": {
