--- a/experiments/item_item_lr.ipynb
+++ b/experiments/item_item_lr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,18 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# users = pd.read_csv('../../data/Users.csv', delimiter=';')\n",
-    "# books = pd.read_csv('../../data/Books.csv', delimiter=';', dtype={'ISBN': str, 'Title': str, 'Author': str, 'Year': np.int16, 'Publisher': str})\n",
-    "# ratings = pd.read_csv('../../data/Ratings.csv', delimiter=';', dtype={'User-ID': np.int32, 'ISBN': str, 'Rating': np.int8})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -50,168 +39,222 @@
        "      <th>user</th>\n",
        "      <th>item</th>\n",
        "      <th>label</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>pca_dim_1</th>\n",
-       "      <th>pca_dim_2</th>\n",
-       "      <th>pca_dim_3</th>\n",
-       "      <th>pca_dim_4</th>\n",
-       "      <th>pca_dim_5</th>\n",
-       "      <th>pca_dim_6</th>\n",
-       "      <th>pca_dim_7</th>\n",
-       "      <th>pca_dim_8</th>\n",
-       "      <th>pca_dim_9</th>\n",
-       "      <th>pca_dim_10</th>\n",
-       "      <th>Year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>67544.0</td>\n",
-       "      <td>0440214009</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0.098736</td>\n",
-       "      <td>-0.016876</td>\n",
-       "      <td>-0.064115</td>\n",
-       "      <td>-0.043559</td>\n",
-       "      <td>0.011505</td>\n",
-       "      <td>0.062887</td>\n",
-       "      <td>0.004183</td>\n",
-       "      <td>0.003117</td>\n",
-       "      <td>0.043744</td>\n",
-       "      <td>0.009762</td>\n",
-       "      <td>1993.0</td>\n",
+       "      <td>276725</td>\n",
+       "      <td>034545104X</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>67544.0</td>\n",
-       "      <td>0688077080</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>-0.063320</td>\n",
-       "      <td>-0.039060</td>\n",
-       "      <td>0.001323</td>\n",
-       "      <td>-0.025799</td>\n",
-       "      <td>0.026691</td>\n",
-       "      <td>0.008113</td>\n",
-       "      <td>0.002605</td>\n",
-       "      <td>-0.110809</td>\n",
-       "      <td>0.049842</td>\n",
-       "      <td>-0.035884</td>\n",
-       "      <td>1989.0</td>\n",
+       "      <td>276726</td>\n",
+       "      <td>0155061224</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>219008.0</td>\n",
-       "      <td>0679405135</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>0.031406</td>\n",
-       "      <td>0.060715</td>\n",
-       "      <td>0.081350</td>\n",
-       "      <td>-0.115592</td>\n",
-       "      <td>0.063185</td>\n",
-       "      <td>0.093926</td>\n",
-       "      <td>0.010901</td>\n",
-       "      <td>0.028100</td>\n",
-       "      <td>-0.013741</td>\n",
-       "      <td>-0.079226</td>\n",
-       "      <td>1996.0</td>\n",
+       "      <td>276727</td>\n",
+       "      <td>0446520802</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>219008.0</td>\n",
-       "      <td>0446519723</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>0.150597</td>\n",
-       "      <td>-0.103935</td>\n",
-       "      <td>0.003405</td>\n",
-       "      <td>0.022489</td>\n",
-       "      <td>-0.018591</td>\n",
-       "      <td>-0.136100</td>\n",
-       "      <td>0.041277</td>\n",
-       "      <td>0.053403</td>\n",
-       "      <td>0.011589</td>\n",
-       "      <td>0.037841</td>\n",
-       "      <td>1995.0</td>\n",
+       "      <td>276729</td>\n",
+       "      <td>052165615X</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>219008.0</td>\n",
-       "      <td>0140096361</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>-0.054594</td>\n",
-       "      <td>0.001724</td>\n",
-       "      <td>-0.063644</td>\n",
-       "      <td>-0.011405</td>\n",
-       "      <td>-0.014985</td>\n",
-       "      <td>0.116361</td>\n",
-       "      <td>0.030079</td>\n",
-       "      <td>-0.026273</td>\n",
-       "      <td>0.054377</td>\n",
-       "      <td>0.051752</td>\n",
-       "      <td>1987.0</td>\n",
+       "      <td>276729</td>\n",
+       "      <td>0521795028</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       user        item  label   Age  pca_dim_1  pca_dim_2  pca_dim_3  \\\n",
-       "0   67544.0  0440214009    7.0  30.0   0.098736  -0.016876  -0.064115   \n",
-       "1   67544.0  0688077080    8.0  30.0  -0.063320  -0.039060   0.001323   \n",
-       "2  219008.0  0679405135    4.0  60.0   0.031406   0.060715   0.081350   \n",
-       "3  219008.0  0446519723    7.0  60.0   0.150597  -0.103935   0.003405   \n",
-       "4  219008.0  0140096361    6.0  60.0  -0.054594   0.001724  -0.063644   \n",
-       "\n",
-       "   pca_dim_4  pca_dim_5  pca_dim_6  pca_dim_7  pca_dim_8  pca_dim_9  \\\n",
-       "0  -0.043559   0.011505   0.062887   0.004183   0.003117   0.043744   \n",
-       "1  -0.025799   0.026691   0.008113   0.002605  -0.110809   0.049842   \n",
-       "2  -0.115592   0.063185   0.093926   0.010901   0.028100  -0.013741   \n",
-       "3   0.022489  -0.018591  -0.136100   0.041277   0.053403   0.011589   \n",
-       "4  -0.011405  -0.014985   0.116361   0.030079  -0.026273   0.054377   \n",
-       "\n",
-       "   pca_dim_10    Year  \n",
-       "0    0.009762  1993.0  \n",
-       "1   -0.035884  1989.0  \n",
-       "2   -0.079226  1996.0  \n",
-       "3    0.037841  1995.0  \n",
-       "4    0.051752  1987.0  "
+       "     user        item  label\n",
+       "0  276725  034545104X      0\n",
+       "1  276726  0155061224      5\n",
+       "2  276727  0446520802      0\n",
+       "3  276729  052165615X      3\n",
+       "4  276729  0521795028      6"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ratings_df = pd.read_csv('../data/df_with_emb_cleaned.csv', delimiter=',')\n",
+    "ratings_df = pd.read_csv('../data/Ratings.csv', delimiter=';', dtype={'User-ID': np.int32, 'ISBN': str, 'Rating': np.int8})\n",
+    "ratings_df.columns = ['user', 'item', 'label']\n",
     "ratings_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training start time: \u001b[35m2024-08-11 19:54:38\u001b[0m\n",
-      "Final block size and num: (6922, 1)\n",
-      "sim_matrix elapsed: 0.422s\n",
-      "sim_matrix, shape: (6922, 6922), num_elements: 2652934, density: 5.5369 %\n"
+      "Total ratings: 1149780\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user</th>\n",
+       "      <th>item</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>276726</td>\n",
+       "      <td>0155061224</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>276729</td>\n",
+       "      <td>052165615X</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>276729</td>\n",
+       "      <td>0521795028</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>276736</td>\n",
+       "      <td>3257224281</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>276737</td>\n",
+       "      <td>0600570967</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1149773</th>\n",
+       "      <td>276704</td>\n",
+       "      <td>0806917695</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1149775</th>\n",
+       "      <td>276704</td>\n",
+       "      <td>1563526298</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1149777</th>\n",
+       "      <td>276709</td>\n",
+       "      <td>0515107662</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1149778</th>\n",
+       "      <td>276721</td>\n",
+       "      <td>0590442449</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1149779</th>\n",
+       "      <td>276723</td>\n",
+       "      <td>05162443314</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>433671 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           user         item  label\n",
+       "1        276726   0155061224      5\n",
+       "3        276729   052165615X      3\n",
+       "4        276729   0521795028      6\n",
+       "6        276736   3257224281      8\n",
+       "7        276737   0600570967      6\n",
+       "...         ...          ...    ...\n",
+       "1149773  276704   0806917695      5\n",
+       "1149775  276704   1563526298      9\n",
+       "1149777  276709   0515107662     10\n",
+       "1149778  276721   0590442449     10\n",
+       "1149779  276723  05162443314      8\n",
+       "\n",
+       "[433671 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print('Total ratings:', ratings_df.shape[0])\n",
+    "\n",
+    "ratings_df = ratings_df[ratings_df['label'] > 0]\n",
+    "ratings_df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training start time: \u001b[35m2024-08-11 20:23:50\u001b[0m\n",
+      "Final block size and num: (1251, 127)\n",
+      "sim_matrix elapsed: 93.239s\n",
+      "sim_matrix, shape: (158852, 158852), num_elements: 96093388, density: 0.3808 %\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "top_k: 100%|██████████| 6922/6922 [00:00<00:00, 14087.88it/s]\n"
+      "top_k: 100%|██████████| 158852/158852 [00:24<00:00, 6539.79it/s] \n"
      ]
     }
    ],
@@ -238,32 +281,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "eval_listwise: 100%|██████████| 243/243 [00:00<00:00, 812.01it/s]\n"
+      "eval_listwise:   1%|          | 156/16407 [00:01<01:25, 189.01it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mno suitable recommendation for user 321, return default recommendation\u001b[0m\n",
-      "\u001b[31mno suitable recommendation for user 687, return default recommendation\u001b[0m\n",
-      "\u001b[31mno suitable recommendation for user 107, return default recommendation\u001b[0m\n",
-      "\u001b[31mno suitable recommendation for user 535, return default recommendation\u001b[0m\n",
-      "\u001b[31mno suitable recommendation for user 337, return default recommendation\u001b[0m\n",
-      "\u001b[31mno suitable recommendation for user 555, return default recommendation\u001b[0m\n",
-      "\u001b[31mno suitable recommendation for user 579, return default recommendation\u001b[0m\n",
-      "\u001b[31mno suitable recommendation for user 486, return default recommendation\u001b[0m\n",
-      "\u001b[31mno suitable recommendation for user 542, return default recommendation\u001b[0m\n",
-      "\u001b[31mno suitable recommendation for user 50, return default recommendation\u001b[0m\n",
+      "\u001b[31mno suitable recommendation for user 39925, return default recommendation\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "eval_listwise:   2%|▏         | 259/16407 [00:01<00:50, 317.04it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mno suitable recommendation for user 25412, return default recommendation\u001b[0m\n",
+      "\u001b[31mno suitable recommendation for user 44239, return default recommendation\u001b[0m\n",
+      "\u001b[31mno suitable recommendation for user 12084, return default recommendation\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "eval_listwise:   2%|▏         | 376/16407 [00:01<00:36, 436.60it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mno suitable recommendation for user 56690, return default recommendation\u001b[0m\n",
+      "\u001b[31mno suitable recommendation for user 17623, return default recommendation\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "eval_listwise:   3%|▎         | 511/16407 [00:01<00:29, 531.08it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mno suitable recommendation for user 53915, return default recommendation\u001b[0m\n",
+      "\u001b[31mno suitable recommendation for user 66434, return default recommendation\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "eval_listwise:   5%|▍         | 804/16407 [00:02<00:22, 686.16it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mno suitable recommendation for user 13863, return default recommendation\u001b[0m\n",
+      "\u001b[31mno suitable recommendation for user 1751, return default recommendation\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "eval_listwise: 100%|██████████| 16407/16407 [00:08<00:00, 1962.18it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Evaluation Results:\n",
-      "{'precision': 0.003703703703703704, 'recall': 0.01461840628507295, 'ndcg': 0.03004512575901459}\n"
+      "{'precision': 0.004382275857865545, 'recall': 0.014942970740036218, 'ndcg': 0.033249598472747145}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from libreco.evaluation import evaluate\n",
+    "\n",
+    "eval_result = evaluate(model, eval_data, neg_sampling=True, metrics=[ \"precision\", \"recall\", \"ndcg\"])\n",
+    "print(f\"Evaluation Results:\\n{eval_result}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Removing rare books**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total ratings (rare books excluded): 94503\n"
+     ]
+    }
+   ],
+   "source": [
+    "rating_count=pd.DataFrame(ratings_df[\"item\"].value_counts())\n",
+    "rare_books=rating_count[rating_count[\"count\"]<=20].index\n",
+    "ratings_df=ratings_df[~ratings_df[\"item\"].isin(rare_books)]\n",
+    "\n",
+    "print('Total ratings (rare books excluded):', ratings_df.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training start time: \u001b[35m2024-08-11 20:25:57\u001b[0m\n",
+      "Final block size and num: (2034, 1)\n",
+      "sim_matrix elapsed: 0.055s\n",
+      "sim_matrix, shape: (2034, 2034), num_elements: 1217048, density: 29.4175 %\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "top_k: 100%|██████████| 2034/2034 [00:00<00:00, 8465.58it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_df, eval_df = random_split(ratings_df, test_size=0.2)\n",
+    "\n",
+    "train_data, data_info = DatasetPure.build_trainset(train_df)\n",
+    "eval_data = DatasetPure.build_evalset(eval_df)\n",
+    "\n",
+    "# Step 3: Build and train the model\n",
+    "model = ItemCF(task=\"ranking\", \n",
+    "               data_info=data_info,\n",
+    "               k_sim=10, \n",
+    "               sim_type=\"cosine\", \n",
+    "               min_common=1)\n",
+    "\n",
+    "model.fit(train_data, neg_sampling=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "eval_listwise: 100%|██████████| 1676/1676 [00:01<00:00, 972.62it/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluation Results:\n",
+      "{'precision': 0.02199015366253916, 'recall': 0.10206671918612688, 'ndcg': 0.11273428439190147}\n"
      ]
     }
    ],
